--- a/index.html
+++ b/index.html
@@ -32,57 +32,58 @@
 
         .main-card {
             text-align: center;
-            background: rgba(10, 10, 10, 0.8); /* Koyu Melonya Paneli */
+            background: rgba(10, 10, 10, 0.85); /* Melonya Koyu Panel */
             padding: 40px;
             border-radius: 20px;
             backdrop-filter: blur(12px);
             border: 2px solid #f1c40f;
-            box-shadow: 0 0 40px rgba(0, 0, 0, 1);
+            box-shadow: 0 0 50px rgba(0, 0, 0, 1);
             max-width: 450px;
             width: 85%;
             z-index: 10;
         }
 
         .logo {
-            width: 120px;
-            height: 120px;
+            width: 130px;
+            height: 130px;
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid #f1c40f;
             margin-bottom: 20px;
-            box-shadow: 0 0 20px #f1c40f;
+            box-shadow: 0 0 25px #f1c40f;
         }
 
         h1 {
-            font-size: 2.8rem;
+            font-size: 3rem;
             margin: 0;
             color: #f1c40f;
-            text-shadow: 0 0 15px rgba(241, 196, 15, 0.5);
+            text-shadow: 0 0 20px rgba(241, 196, 15, 0.6);
             animation: textPulse 2s infinite alternate;
         }
 
         @keyframes textPulse {
             from { transform: scale(1); }
-            to { transform: scale(1.03); }
+            to { transform: scale(1.05); }
         }
 
         .ip-box {
             background: rgba(255, 255, 255, 0.05);
-            padding: 12px;
-            border-radius: 10px;
-            margin: 20px 0;
+            padding: 15px;
+            border-radius: 12px;
+            margin: 25px 0;
             border: 1px dashed #f1c40f;
             cursor: pointer;
             transition: 0.3s;
         }
 
         .ip-box:hover {
-            background: rgba(241, 196, 15, 0.15);
+            background: rgba(241, 196, 15, 0.2);
         }
 
         .status-info {
-            margin-bottom: 20px;
+            margin-bottom: 25px;
             font-weight: bold;
+            font-size: 1.1rem;
         }
 
         .online-dot {
@@ -97,27 +98,29 @@
 
         .btn-container {
             display: flex;
-            gap: 10px;
+            gap: 15px;
             justify-content: center;
         }
 
         .btn {
             background: #f1c40f;
             color: #000;
-            padding: 14px 20px;
-            border-radius: 8px;
+            padding: 15px 25px;
+            border-radius: 10px;
             font-weight: 900;
-            text-decoration: none !important;
+            text-decoration: none;
             transition: 0.3s;
             flex: 1;
             text-transform: uppercase;
-            display: block;
+            border: none;
+            cursor: pointer;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .btn:hover {
             background: #fff;
             transform: translateY(-3px);
-            box-shadow: 0 5px 15px rgba(241, 196, 15, 0.4);
+            box-shadow: 0 10px 20px rgba(241, 196, 15, 0.4);
         }
 
         .btn.sec {
@@ -134,39 +137,47 @@
         <h1>BANANA SMP</h1>
         
         <div class="ip-box" onclick="copyIP()">
-            <span style="font-size: 0.7rem; color: #aaa; display: block;">IP ADRESİNİ KOPYALA</span>
-            <span id="server-ip" style="font-size: 1.1rem; color: #f1c40f;">bananablocks.falixsrv.me</span>
+            <span style="font-size: 0.7rem; color: #aaa; display: block; margin-bottom: 5px;">IP ADRESİNİ KOPYALAMAK İÇİN TIKLA</span>
+            <span id="server-ip" style="font-size: 1.2rem; color: #f1c40f;">bananablocks.falixsrv.me</span>
         </div>
 
         <div class="status-info">
-            <span class="online-dot"></span> <span id="status-text">KONTROL EDİLİYOR...</span> 
+            <span class="online-dot" id="dot"></span> <span id="status-text">KONTROL EDİLİYOR...</span> 
             | <span id="online-count">0/20</span> OYUNCU
         </div>
 
         <div class="btn-container">
-            <a href="https://falixnodes.net/register" target="_blank" class="btn">KAYIT OL</a>
-            <a href="#" onclick="copyIP()" class="btn sec">IP KOPYALA</a>
+            <button onclick="Tawk_API.toggle()" class="btn">DESTEK / KAYIT</button>
+            <button onclick="copyIP()" class="btn sec">IP KOPYALA</button>
         </div>
     </div>
 
     <script>
-        // IP Kopyalama
+        // IP Kopyalama Fonksiyonu
         function copyIP() {
             const ipText = document.getElementById('server-ip').innerText;
             navigator.clipboard.writeText(ipText);
-            alert("Sunucu adresi kopyalandı! Oyuna katılabilirsin.");
+            alert("Sunucu adresi kopyalandı! Minecraft'a yapıştırıp girebilirsin.");
         }
 
-        // Durum Güncelleme
+        // Sunucu Durumunu Çekme
         async function updateStatus() {
             try {
                 const res = await fetch('https://api.mcstatus.io/v2/status/java/bananablocks.falixsrv.me');
                 const data = await res.json();
+                const statusText = document.getElementById('status-text');
+                const dot = document.getElementById('dot');
+                
                 if (data.online) {
-                    document.getElementById('status-text').innerText = "AKTİF";
+                    statusText.innerText = "AKTİF";
+                    statusText.style.color = "#2ecc71";
+                    dot.style.backgroundColor = "#2ecc71";
                     document.getElementById('online-count').innerText = data.players.online + "/" + data.players.max;
                 } else {
-                    document.getElementById('status-text').innerText = "KAPALI";
+                    statusText.innerText = "KAPALI";
+                    statusText.style.color = "#e74c3c";
+                    dot.style.backgroundColor = "#e74c3c";
+                    dot.style.boxShadow = "0 0 10px #e74c3c";
                 }
             } catch (e) { console.log("Hata:", e); }
         }
