--- a/index.html
+++ b/index.html
@@ -104,37 +104,11 @@
             font-weight: 700;
         }
 
-        /* ANA BUTONLAR */
-        .hero-btns {
-            margin-top: 40px;
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-        }
-
-        .btn-main {
-            padding: 20px 60px;
-            font-size: 1.2rem;
-            font-weight: 900;
-            border-radius: 8px;
-            text-decoration: none;
-            text-transform: uppercase;
-            transition: 0.3s;
-            cursor: pointer;
-            border: none;
-            display: inline-block;
-        }
-
-        .btn-yellow { background: #f1c40f; color: black; box-shadow: 0 5px 0 #b7950b; }
-
-        .btn-main:hover { transform: translateY(-3px); }
-
         /* MARKET BÖLÜMÜ */
         .market-section {
             background: #111;
             padding: 80px 20px;
             text-align: center;
-            min-height: 100vh;
         }
 
         .market-title {
@@ -142,14 +116,13 @@
             font-size: 3rem;
             margin-bottom: 50px;
             font-weight: 900;
-            text-shadow: 2px 2px 0px #000;
         }
 
         .market-container {
             display: flex;
             justify-content: center;
             gap: 30px;
-            max-width: 1200px;
+            max-width: 1100px;
             margin: 0 auto;
             flex-wrap: wrap;
         }
@@ -159,31 +132,18 @@
             padding: 30px;
             border-radius: 15px;
             border: 2px solid #222;
-            transition: 0.4s;
+            transition: 0.3s;
             width: 280px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
-        .market-card:hover { 
-            border-color: #f1c40f; 
-            transform: translateY(-10px);
-            box-shadow: 0 10px 20px rgba(241, 196, 15, 0.1);
-        }
+        .market-card:hover { border-color: #f1c40f; transform: translateY(-10px); }
 
         .market-card img { 
             width: 100px; 
             height: 100px; 
             object-fit: contain; 
-            margin-bottom: 20px; 
-            image-rendering: pixelated;
-        }
-
-        .market-card h3 {
-            margin: 10px 0;
-            font-size: 1.2rem;
-            color: #eee;
+            margin-bottom: 20px;
+            image-rendering: pixelated; 
         }
 
         .price-tag {
@@ -198,7 +158,7 @@
             background: transparent;
             color: #f1c40f;
             border: 2px solid #f1c40f;
-            padding: 12px 20px;
+            padding: 10px 20px;
             border-radius: 5px;
             font-weight: 700;
             cursor: pointer;
@@ -206,7 +166,6 @@
             transition: 0.3s;
             text-decoration: none;
             display: inline-block;
-            text-transform: uppercase;
         }
 
         .buy-btn:hover { background: #f1c40f; color: black; }
@@ -244,8 +203,8 @@
                 <span id="status-text">BAĞLANILIYOR...</span> | <span id="online-count">0/20</span> AKTİF
             </div>
 
-            <div class="hero-btns">
-                <a href="#market" class="btn-main btn-yellow">MARKETE GÖZ AT</a>
+            <div class="hero-btns" style="margin-top: 40px;">
+                <a href="#market" style="padding: 20px 60px; background: #f1c40f; color: black; text-decoration: none; font-weight: 900; border-radius: 8px; box-shadow: 0 5px 0 #b7950b;">MARKETE GÖZ AT</a>
             </div>
         </div>
     </section>
@@ -264,7 +223,7 @@
             <div class="market-card">
                 <img src="https://minecraft.wiki/images/End_Crystal_JE2_BE2.png" alt="end-kristali">
                 <h3>END KRİSTALİ</h3>
-                <span class="price-tag">3.500 Altın</span>
+                <span class="price-tag">2.500 Altın</span>
                 <button class="buy-btn" onclick="window.open('https://banananetwork.craftingstore.net/category/524295')">SATIN AL</button>
             </div>
 
